--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,14 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.8.5
+  firebase_auth: ^4.7.2
   firebase_core: ^2.15.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   google_fonts: ^5.1.0
+  google_sign_in: ^6.1.4
   intl: ^0.18.1
 
 dev_dependencies:
